--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,5 @@
 <link
   rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
   media="print"
 />
