docs: poc use wrap typography

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,3 +3,11 @@
   href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
   media="print"
 />
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const body = document.querySelector('body');
+    body.classList.add('sb-unstyled');
+    body.classList.add('evg-longform');
+  });
+</script>
