docs: add a build step route example using the production npm package

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,7 @@
       </evg-section>
     </header>
 
-    <evg-section class="evg-theme-default">
+    <evg-section class="evg-theme">
       <main
         id="main"
         tabIndex={-1}
